--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "@sanity/client": "^3.4.1",
+    "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
