--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@sanity/client": "^3.4.1",
+    "antd": "^4.23.5",
     "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
