--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.4.1",
     "antd": "^4.23.5",
     "dayjs": "^1.11.5",
     "next": "^12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
